--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "flux": "2.1.1",
     "front-matter": "2.0.0",
     "history": "1.12.5",
+    "moment": "^2.10.6",
     "normalize.css": "3.0.3",
     "react": "0.14.0",
     "react-dom": "0.14.0",
     "react-routing": "0.0.5",
     "source-map-support": "0.3.3",
-    "superagent": "1.4.0"
+    "superagent": "1.4.0",
+    "twit": "^2.1.1",
+    "twitter-text": "^1.13.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
