--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "source-map-support": "0.3.3",
     "superagent": "1.4.0",
     "twit": "^2.1.1",
-    "twitter-text": "^1.13.2"
+    "twitter-text": "^1.13.2",
+    "winston": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
