--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "node": ">=4.1 <5",
     "npm": ">=3.1 <4"
   },
+  "browser": {
+    "fs": false
+  },
   "dependencies": {
     "babel-core": "5.8.29",
     "bluebird": "2.10.2",
@@ -13,15 +16,15 @@
     "express": "4.13.3",
     "fastclick": "1.0.6",
     "fbjs": "0.3.2",
-    "flux": "2.1.1",
+    "flux": "^2.1.1",
     "front-matter": "2.0.0",
-    "history": "1.12.5",
+    "history": "^1.13.1",
     "instagram-node": "^0.5.8",
     "moment": "^2.10.6",
     "normalize.css": "3.0.3",
     "react": "0.14.0",
     "react-dom": "0.14.0",
-    "react-routing": "0.0.5",
+    "react-router": "^1.0.0",
     "source-map-support": "0.3.3",
     "superagent": "1.4.0",
     "twit": "^2.1.1",
@@ -66,7 +69,8 @@
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.4.1"
+    "webpack-hot-middleware": "^2.4.1",
+    "winston-logentries": "^1.0.1"
   },
   "jest": {
     "rootDir": "./src",
