--- a/.jscsrc
+++ b/.jscsrc
@@ -3,6 +3,7 @@
   "preset": "airbnb",
   "excludeFiles": ["build/**", "node_modules/**"],
   "validateIndentation": 4,
+  "disallowMultipleLineBreaks": false,
   "requireTrailingComma": null,
   "validateQuoteMarks": null
 }
