--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-plugin-react-transform": "^1.1.1",
     "browser-sync": "^2.9.11",
     "commander": "2.0.0",
+    "cookie-parser": "^1.4.0",
     "css-loader": "^0.21.0",
     "csscomb": "^3.1.8",
     "del": "^2.0.2",
@@ -48,6 +49,7 @@
     "eslint-config-airbnb": "0.1.0",
     "eslint-loader": "^1.1.0",
     "eslint-plugin-react": "^3.6.3",
+    "express-session": "^1.12.1",
     "file-loader": "^0.8.4",
     "gaze": "^0.5.2",
     "git-repository": "^0.1.1",
