--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "babel-core": "5.8.29",
     "bluebird": "2.10.2",
     "classnames": "^2.2.0",
+    "cookie-parser": "^1.4.0",
     "eventemitter3": "1.1.1",
     "express": "4.13.3",
+    "express-session": "^1.12.1",
     "fastclick": "1.0.6",
     "fbjs": "0.3.2",
     "flux": "^2.1.1",
@@ -31,7 +33,8 @@
     "twit": "^2.1.1",
     "twitter-text": "^1.13.2",
     "warning": "^2.1.0",
-    "winston": "^2.1.0"
+    "winston": "^2.1.0",
+    "winston-logentries": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
@@ -41,7 +44,6 @@
     "babel-plugin-react-transform": "^1.1.1",
     "browser-sync": "^2.9.11",
     "commander": "2.0.0",
-    "cookie-parser": "^1.4.0",
     "css-loader": "^0.21.0",
     "csscomb": "^3.1.8",
     "del": "^2.0.2",
@@ -49,7 +51,6 @@
     "eslint-config-airbnb": "0.1.0",
     "eslint-loader": "^1.1.0",
     "eslint-plugin-react": "^3.6.3",
-    "express-session": "^1.12.1",
     "file-loader": "^0.8.4",
     "gaze": "^0.5.2",
     "git-repository": "^0.1.1",
@@ -74,8 +75,7 @@
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.4.1",
-    "winston-logentries": "^1.0.1"
+    "webpack-hot-middleware": "^2.4.1"
   },
   "jest": {
     "rootDir": "./src",
