--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "0.14.0",
     "react-dom": "0.14.0",
     "react-router": "^1.0.0",
+    "react-sticky": "^3.0.0",
     "source-map-support": "0.3.3",
     "superagent": "1.4.0",
     "twit": "^2.1.1",
